--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Gallery</li>
-                <li>Contact</li>
+                <li><a href="###" target="_blank" >Home</a></li>
+                <li><a href="###" target="_blank" >About</a></li>
+                <li><a href="###" target="_blank" >Gallery</a></li>
+                <li><a href="###" target="_blank" >Contact</a></li>
             </ul>
         </nav>
     </header>
